--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -1,6 +1,14 @@
 {
     "cells": [
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Model training\n",
+                "This notebook initializes dataset, defines the model, and implements training function."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {
@@ -30,12 +38,29 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# 1. Data Loading\n",
+                "We load the RealWaste dataset and divide it into training, validation and test subsets."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {
                 "id": "KFnX37_JHg36"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Total images: 4752\n",
+                        "Train: 3798, Val: 475, Test: 479\n"
+                    ]
+                }
+            ],
             "source": [
                 "data_dir = \"dataset/RealWaste\"\n",
                 "\n",
@@ -76,8 +101,16 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 2. Data Preprocessing\n",
+                "We apply necessary transformations such as resizing and normalization to prepare the images for model training."
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "metadata": {
                 "id": "gQhZvf-kJ_B6"
             },
@@ -117,6 +150,14 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# 4. Model\n",
+                "We define the model class WasteClassifier and use ResNet18 as the base model. We use cuda to run the model on the GPU."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {
@@ -124,13 +165,13 @@
             },
             "outputs": [],
             "source": [
-                "# Defines the model ensuring consistency with model.py\n",
+                "# define the model ensuring consistency with model.py\n",
                 "class WasteClassifier(nn.Module):\n",
                 "    def __init__(self, num_classes=9, weights='DEFAULT'):\n",
                 "        super().__init__()\n",
                 "        # Use weights instead of pretrained=True to avoid deprecation warnings\n",
                 "        self.backbone = resnet18(weights=weights)\n",
-                "        # Replace the last layer\n",
+                "        # replace the last layer\n",
                 "        in_features = self.backbone.fc.in_features\n",
                 "        self.backbone.fc = nn.Linear(in_features, num_classes)\n",
                 "\n",
@@ -140,6 +181,14 @@
                 "model = WasteClassifier(num_classes=9)\n",
                 "if torch.cuda.is_available():\n",
                 "    model = model.cuda()  # Move to GPU"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# 5. Handling Class Imbalance\n",
+                "We use Weighted Cross-Entropy Loss to handle class imbalance."
             ]
         },
         {
@@ -162,6 +211,14 @@
                 "\n",
                 "# Use weighted loss\n",
                 "criterion = nn.CrossEntropyLoss(weight=weights_tensor)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# 6. Model training\n",
+                "We train the model for 25 epochs and save the best model weights."
             ]
         },
         {
@@ -202,7 +259,7 @@
                 "\n",
                 "    train_acc = train_correct / len(train_dataset)\n",
                 "\n",
-                "    # Validation\n",
+                "    # validation\n",
                 "    model.eval()\n",
                 "    val_loss = 0\n",
                 "    val_correct = 0\n",
@@ -223,21 +280,31 @@
                 "    print(f'Epoch {epoch+1}: Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.4f}, '\n",
                 "          f'Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.4f}')\n",
                 "\n",
-                "    # Save the best model\n",
+                "    # save the best model\n",
                 "    if val_acc > best_val_acc:\n",
                 "        best_val_acc = val_acc\n",
-                "        torch.save(model.state_dict(), 'best_waste_model.pth')\n",
+                "        torch.save(model.state_dict(), 'pretrained/best_waste_model.pth')\n",
                 "        print(f'New best model saved with accuracy: {val_acc:.4f}')"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "venv",
+            "language": "python",
             "name": "python3"
         },
         "language_info": {
-            "name": "python"
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.11.9"
         }
     },
     "nbformat": 4,
