model architecrute shift, experiments with transforms, bug fixes with dataset preprocessing, gradcam, nicer readme.md

--- a/evaluate/evaluation.ipynb
+++ b/evaluate/evaluation.ipynb
@@ -6,15 +6,38 @@
    "source": [
     "# AI Model Evaluation\n",
     "\n",
-    "This notebook evaluates the `WasteClassifier` model trained on the RealWaste dataset. \n",
-    "It includes visualizations of predictions, confusion matrices, and accuracy metrics."
+    "This notebook evaluates the `WasteClassifier` model trained on the mix of Realwaste and Trashnet datasets. \n",
+    "It includes visualizations of predictions with Grad-CAM heatmaps, confusion matrices, and accuracy metrics."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     17\u001b[39m parent_dir = os.path.dirname(current_dir)\n\u001b[32m     18\u001b[39m sys.path.append(parent_dir)\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgradcam\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GradCAM\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m# Set device\u001b[39;00m\n\u001b[32m     23\u001b[39m device = torch.device(\u001b[33m'\u001b[39m\u001b[33mcuda\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mcpu\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'utils'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -28,6 +51,14 @@
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "import os\n",
     "import random\n",
+    "import sys\n",
+    "\n",
+    "# Fix path to import model from parent directory\n",
+    "current_dir = os.path.dirname(os.path.abspath(''))\n",
+    "parent_dir = os.path.dirname(current_dir)\n",
+    "sys.path.append(parent_dir)\n",
+    "\n",
+    "from utils.gradcam import GradCAM\n",
     "\n",
     "# Set device\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -64,7 +95,7 @@
     "model = model.to(device)\n",
     "\n",
     "# Load weights\n",
-    "weights_path = 'best_waste_model.pth'\n",
+    "weights_path = '../pretrained/best_waste_model.pth'\n",
     "if os.path.exists(weights_path):\n",
     "    model.load_state_dict(torch.load(weights_path, map_location=device))\n",
     "    print(\"Model weights loaded successfully!\")\n",
@@ -89,7 +120,7 @@
    "outputs": [],
    "source": [
     "# Defines classes based on directory structure (Alphabetical order by default in ImageFolder)\n",
-    "data_dir = \"dataset/RealWaste\"\n",
+    "data_dir = \"../dataset\"\n",
     "classes = sorted([d for d in os.listdir(data_dir) if os.path.isdir(os.path.join(data_dir, d))])\n",
     "print(f\"Classes found: {classes}\")\n",
     "\n",
@@ -120,8 +151,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Visual Predictions\n",
-    "Let's see the model in action by predicting on random images."
+    "## 3. Visual Predictions with Grad-CAM\n",
+    "Let's see the model in action by predicting on random images and overlaying Grad-CAM heatmaps."
    ]
   },
   {
@@ -143,20 +174,33 @@
     "    \n",
     "    indices = random.sample(range(len(dataset)), num_images)\n",
     "    \n",
+    "    # Initialize GradCAM\n",
+    "    target_layer = model.backbone.layer4[-1]\n",
+    "    grad_cam = GradCAM(model, target_layer)\n",
+    "    \n",
     "    for i, idx in enumerate(indices):\n",
     "        image, label = dataset[idx]\n",
     "        \n",
     "        # Prediction\n",
+    "        input_tensor = image.unsqueeze(0).to(device)\n",
+    "        \n",
+    "        # Generate CAM\n",
+    "        cam = grad_cam.generate_cam(input_tensor)\n",
+    "        \n",
     "        with torch.no_grad():\n",
-    "            input_tensor = image.unsqueeze(0).to(device)\n",
     "            output = model(input_tensor)\n",
     "            _, predicted = torch.max(output, 1)\n",
     "            predicted_idx = predicted.item()\n",
     "            \n",
     "        # Plotting\n",
     "        ax = axes[i]\n",
-    "        img_display = denormalize(image)\n",
-    "        ax.imshow(img_display)\n",
+    "        img_display_np = denormalize(image)\n",
+    "        img_display_pil = Image.fromarray((img_display_np * 255).astype(np.uint8))\n",
+    "        \n",
+    "        # Overlay\n",
+    "        overlayed = grad_cam.overlay_heatmap(img_display_pil, cam, alpha=0.5)\n",
+    "        \n",
+    "        ax.imshow(overlayed)\n",
     "        \n",
     "        color = 'green' if predicted_idx == label else 'red'\n",
     "        ax.set_title(f\"True: {classes[label]}\\nPred: {classes[predicted_idx]}\", color=color, fontsize=12, fontweight='bold')\n",
@@ -217,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
