fix: resolve data leakage in evaluation scripts and update metrics

--- a/evaluate/evaluate_model.ipynb
+++ b/evaluate/evaluate_model.ipynb
@@ -96,16 +96,7 @@
             "cell_type": "code",
             "execution_count": 3,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Classes: ['Cardboard', 'Food Organics', 'Glass', 'Metal', 'Miscellaneous Trash', 'Paper', 'Plastic', 'Textile Trash', 'Vegetation']\n",
-                        "Evaluating on 1000 samples.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Data Transforms (Validation/Test Standard)\n",
                 "IMAGENET_MEAN = [0.485, 0.456, 0.406]\n",
@@ -129,15 +120,35 @@
                 "classes = dataset.classes\n",
                 "print(f\"Classes: {classes}\")\n",
                 "\n",
-                "# Create a subset for quick evaluation (e.g., 500 images) or use full\n",
-                "# Using full dataset for metrics, but shuffling\n",
-                "indices = list(range(len(dataset)))\n",
-                "random.seed(42)\n",
-                "random.shuffle(indices)\n",
+                "# REPLICATE TRAINING SPLIT LOGIC\n",
+                "# Stratified Split (80% Train, 10% Val, 10% Test)\n",
+                "from sklearn.model_selection import train_test_split\n",
                 "\n",
-                "eval_subset = Subset(dataset, indices[:1000]) # Evaluate on 1000 random samples\n",
+                "# Get indices per class\n",
+                "class_indices = {i: [] for i in range(len(dataset.classes))}\n",
+                "for idx, (_, label) in enumerate(dataset.samples):\n",
+                "    class_indices[label].append(idx)\n",
+                "\n",
+                "test_indices = []\n",
+                "\n",
+                "# Replicate the split logic with random_state=42\n",
+                "for label, indices in class_indices.items():\n",
+                "    # First split: 80% Train, 20% Temp\n",
+                "    train_idx, temp_idx = train_test_split(\n",
+                "        indices, train_size=0.8, random_state=42, stratify=[label]*len(indices)\n",
+                "    )\n",
+                "    # Second split: Temp -> 50% Val, 50% Test\n",
+                "    val_idx, test_idx = train_test_split(\n",
+                "        temp_idx, train_size=0.5, random_state=42, stratify=[label]*len(temp_idx)\n",
+                "    )\n",
+                "    test_indices.extend(test_idx)\n",
+                "\n",
+                "print(f\"Total images: {len(dataset)}\")\n",
+                "print(f\"Test set sizes: {len(test_indices)}\")\n",
+                "\n",
+                "eval_subset = Subset(dataset, test_indices)\n",
                 "dataloader = DataLoader(eval_subset, batch_size=32, shuffle=False)\n",
-                "print(f\"Evaluating on {len(eval_subset)} samples.\")"
+                "print(f\"Evaluating on {len(eval_subset)} samples (Dedicated Test Set).\")"
             ]
         },
         {
@@ -156,7 +167,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "Evaluating: 100%|██████████| 32/32 [00:07<00:00,  4.22it/s]"
+                        "Evaluating: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 32/32 [00:07<00:00,  4.22it/s]"
                     ]
                 },
                 {
