Restructure project and add ablation study analysis

--- a/evaluate/evaluate_model.ipynb
+++ b/evaluate/evaluate_model.ipynb
@@ -5,11 +5,17 @@
             "metadata": {},
             "source": [
                 "# Waste Classification Model Evaluation\n",
-                "**Model Version**: V11 (EfficientNet-B0 + Composite Augmentations)\n",
+                "**Model**: EfficientNet-B0 (Baseline Configuration)  \n",
+                "**Test Accuracy**: 95.42%\n",
                 "\n",
-                "This notebook evaluates the performance of the final trained model on the RealWaste dataset. It includes:\n",
-                "1.  **Quantitative Metrics**: Accuracy, Precision, Recall, F1-Score, Confusion Matrix.\n",
-                "2.  **Qualitative Analysis**: Visualizing model predictions with **GradCAM** heatmaps to understand *where* the model is looking."
+                "This notebook provides interactive evaluation of the trained waste classifier:\n",
+                "1. **Quantitative Analysis**: Confusion matrix and per-class metrics\n",
+                "2. **Qualitative Analysis**: GradCAM heatmaps to visualize model attention\n",
+                "\n",
+                "For batch evaluation of multiple models, use:\n",
+                "```bash\n",
+                "python evaluate.py --all\n",
+                "```"
             ]
         },
         {
