--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -6,15 +6,21 @@
             "source": [
                 "# Waste Classification Training Pipeline\n",
                 "**Architecture**: EfficientNet-B0  \n",
-                "**Objective**: Robust classification of 9 waste categories using a Composite Augmentation Strategy.\n",
+                "**Dataset**: RealWaste + TrashNet (Hybrid)  \n",
+                "**Final Model**: Baseline Configuration (95.42% Test Accuracy)\n",
                 "\n",
-                "## Methodology\n",
-                "To address real-world challenges such as distinguishing **White Metal Cans** from **White Paper**, this pipeline implements a specialized data augmentation strategy that targets specific material properties:\n",
+                "## Key Finding\n",
+                "Through systematic ablation study, I discovered that combining RealWaste and TrashNet datasets provided sufficient data diversity, making complex augmentation and regularization techniques **unnecessary**. The baseline model (simple augmentations + standard CrossEntropy) outperformed the fully-regularized model by 1.53%.\n",
                 "\n",
-                "1.  **Scale Invariance**: `RandomAffine` ensures the model recognizes objects at various zoom levels (close-ups vs far shots).\n",
-                "2.  **Material Sheen**: `ColorJitter` allows the model to learn specular highlights (shine) characteristic of metal.\n",
-                "3.  **Structural Learning**: `RandomGrayscale` forces the model to rely on object geometry rather than just color.\n",
-                "4.  **Texture Enhancement**: `RandomAdjustSharpness` emphasizes edges and creases, critical for identifying crumpled paper."
+                "## This Notebook\n",
+                "This notebook implements the **full regularization pipeline** (Mixup, Label Smoothing, Class Weights, Composite Augmentations) for educational purposes and ablation comparison. For production training, use the baseline configuration in `ablation/train.py`.\n",
+                "\n",
+                "## Composite Augmentation Strategy\n",
+                "The augmentation pipeline was designed to address specific material confusion cases:\n",
+                "1. **Scale Invariance**: `RandomAffine` for varying zoom levels\n",
+                "2. **Material Sheen**: `ColorJitter` for specular highlights (metal vs paper)\n",
+                "3. **Structural Learning**: `RandomGrayscale` for geometry-based features\n",
+                "4. **Texture Enhancement**: `RandomAdjustSharpness` for edges and creases"
             ]
         },
         {
@@ -313,6 +319,145 @@
                 "        best_val_acc = val_acc\n",
                 "        torch.save(model.state_dict(), 'weights/best_waste_model.pth')\n",
                 "        print(f'New best model saved! Accuracy: {val_acc:.4f}')"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "\n",
+                "## 6. Baseline Model Training (Recommended)\n",
+                "\n",
+                "Based on the ablation study results, the baseline configuration outperforms the full regularization pipeline. This section trains a simpler, more effective model:\n",
+                "\n",
+                "**Key Differences:**\n",
+                "- **No Mixup**: Removed data-level regularization\n",
+                "- **No Label Smoothing**: Standard CrossEntropy loss\n",
+                "- **No Class Weights**: Dataset is sufficiently balanced\n",
+                "- **Basic Augmentations**: Resize, RandomCrop, HorizontalFlip only\n",
+                "\n",
+                "**Result:** 95.42% test accuracy (+1.53% vs full pipeline)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Baseline Data Transforms (Simple but Effective)\n",
+                "baseline_train_transforms = Compose([\n",
+                "    Resize(256),\n",
+                "    RandomResizedCrop(224),\n",
+                "    RandomHorizontalFlip(),\n",
+                "    ToTensor(),\n",
+                "    Normalize(IMAGENET_MEAN, IMAGENET_STD)\n",
+                "])\n",
+                "\n",
+                "# Re-create dataloaders with baseline transforms\n",
+                "baseline_train_dataset = TransformedDataset(Subset(base_dataset, train_indices), baseline_train_transforms)\n",
+                "baseline_train_loader = DataLoader(baseline_train_dataset, batch_size=32, shuffle=True, num_workers=0)\n",
+                "\n",
+                "print(f\"Baseline training set: {len(baseline_train_dataset)} samples\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Initialize fresh model for baseline\n",
+                "baseline_model = WasteClassifier(num_classes=len(base_dataset.classes))\n",
+                "baseline_model = baseline_model.to(device)\n",
+                "\n",
+                "# Optimizer and Scheduler\n",
+                "baseline_optimizer = optim.AdamW(baseline_model.parameters(), lr=1e-4, weight_decay=1e-4)\n",
+                "baseline_scheduler = optim.lr_scheduler.CosineAnnealingLR(baseline_optimizer, T_max=EPOCHS)\n",
+                "\n",
+                "# Standard CrossEntropy (No weights, No label smoothing)\n",
+                "baseline_criterion = nn.CrossEntropyLoss()\n",
+                "\n",
+                "print(\"Baseline model initialized\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Baseline Training Loop\n",
+                "baseline_best_val_acc = 0.0\n",
+                "\n",
+                "for epoch in range(EPOCHS):\n",
+                "    # Training Phase\n",
+                "    baseline_model.train()\n",
+                "    train_loss = 0\n",
+                "    train_correct = 0\n",
+                "    \n",
+                "    for images, labels in tqdm(baseline_train_loader, desc=f'Baseline Epoch {epoch+1}/{EPOCHS} - Train'):\n",
+                "        images, labels = images.to(device), labels.to(device)\n",
+                "        \n",
+                "        baseline_optimizer.zero_grad()\n",
+                "        outputs = baseline_model(images)\n",
+                "        loss = baseline_criterion(outputs, labels)\n",
+                "        \n",
+                "        loss.backward()\n",
+                "        baseline_optimizer.step()\n",
+                "        \n",
+                "        train_loss += loss.item()\n",
+                "        train_correct += (outputs.argmax(1) == labels).sum().item()\n",
+                "    \n",
+                "    train_acc = train_correct / len(baseline_train_dataset)\n",
+                "    \n",
+                "    # Validation Phase\n",
+                "    baseline_model.eval()\n",
+                "    val_loss = 0\n",
+                "    val_correct = 0\n",
+                "    \n",
+                "    with torch.no_grad():\n",
+                "        for images, labels in tqdm(val_loader, desc=f'Baseline Epoch {epoch+1}/{EPOCHS} - Val'):\n",
+                "            images, labels = images.to(device), labels.to(device)\n",
+                "            outputs = baseline_model(images)\n",
+                "            loss = baseline_criterion(outputs, labels)\n",
+                "            \n",
+                "            val_loss += loss.item()\n",
+                "            val_correct += (outputs.argmax(1) == labels).sum().item()\n",
+                "    \n",
+                "    val_acc = val_correct / len(val_dataset)\n",
+                "    baseline_scheduler.step()\n",
+                "    \n",
+                "    print(f'Baseline Epoch {epoch+1}: Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.4f}')\n",
+                "    \n",
+                "    # Save checkpoint\n",
+                "    os.makedirs('weights/baseline', exist_ok=True)\n",
+                "    torch.save(baseline_model.state_dict(), f'weights/baseline/model_epoch_{epoch+1}.pth')\n",
+                "    \n",
+                "    # Save best model\n",
+                "    if val_acc > baseline_best_val_acc:\n",
+                "        baseline_best_val_acc = val_acc\n",
+                "        torch.save(baseline_model.state_dict(), 'weights/best_waste_model.pth')\n",
+                "        print(f'New baseline best model saved! Accuracy: {val_acc:.4f}')"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Summary\n",
+                "\n",
+                "This notebook demonstrates both approaches:\n",
+                "1. **Full Pipeline** (Sections 1-5): Educational demonstration of advanced techniques\n",
+                "2. **Baseline** (Section 6): Production-ready model with superior performance\n",
+                "\n",
+                "**Key Insight:** Dataset diversity (RealWaste + TrashNet) provides sufficient generalization, making complex regularization counterproductive.\n",
+                "\n",
+                "**Next Steps:**\n",
+                "- Evaluate: `python evaluate/evaluate.py --model baseline`\n",
+                "- Compare: `python evaluate/evaluate.py --all`\n",
+                "- Deploy: `python app.py`"
             ]
         }
     ],
